--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,8 @@
 version: "3.9"
 services:
   redis:
-    image: redis:latest
+    container_name: redis_container
+    image: jelastic/redis:7.2.1
     ports:
       - "6379:6379"
     volumes:
@@ -26,20 +27,23 @@ services:
   postgres:
     container_name: postgres_container
     image: postgres
+      #image: jelastic/postgres:15.4 # needs setup see: https://github.com/jelastic-jps/postgres/blob/v2.0.0/addons/auto-cluster.yaml (cmd[..] ...)
     environment:
       POSTGRES_USER: ${POSTGRES_USER:-postgres}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-changeme}
+      POSTGRES_DB: ${POSTGRES_DB:-postgres_db}
       PGDATA: /data/postgres
     volumes:
-      - postgres:/data/postgres
+      - postgres:/var/lib/pgsql/data/
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -d $${POSTGRES_DB} -U postgres"]
-      interval: 10s
+      test: ["CMD-SHELL", "pg_isready -d ${POSTGRES_DB:-postgres_db} -U ${POSTGRES_USER:-postgres}"]
+      interval: 60s
       timeout: 5s
-      retries: 10
-      start_period: 3s
+      retries: 5
+      start_period: 10s
     ports:
       - "5432:5432"
+      - "5051:80"
     networks:
       - postgres
     restart: unless-stopped
@@ -60,6 +64,7 @@ services:
     restart: unless-stopped
 
   app:
+    container_name: gunicorn_container
     build:
       context: .
       args:
@@ -67,15 +72,24 @@ services:
     depends_on:
       redis:
         condition: service_started
-          #db:
-          #  condition: service_healthy
-
+      postgres:
+        condition: service_healthy
+    healthcheck:
+      test: curl --fail http://app:8000/ || exit 1
+      interval: 60s
+      timeout: 10s
+      retries: 3
+      start_period: 10s
+    restart: unless-stopped
     ports:
-      - "80:80"
+      - "${PORT:-80}:8000"
     env_file:
       - .env
     volumes:
       - .:/app:cached
+      - type: bind
+        source: ${APP_PATH:-./app}
+        target: /app
 
 networks:
   postgres:
